2018-09-10 Josef Cacek (1.6.4)
  * Upgrade Java runtime in Windows distributions to Java 8 (u181)

2018-09-09 Dan Cvrcek
  * A new interface for remote/external crypto service providers - net.sf.jsignpdf.extcsp.IExternalCryptoProvider
  * Integration with FoxyProxy (https://gitlab.com/cloudfoxy/foxyproxy) for (eIDAS) external signatures 

2018-04-19 Josef Cacek (1.6.3)
  * Allow loading truststore specified by "javax.net.ssl.trustStore" System property
  * Log warning message if conf/conf.properties configuration file is not found

2017-12-12 Josef Cacek (1.6.2)
  * BouncyCastle library updated to version 1.49 (due to http://www.bouncycastle.org/jira/browse/BJA-351)

2014-09-16 Josef Cacek (1.6.1)
  * page number out of range means the last page in the visible signatures (contrary to the first one used in previous versions)

2014-06-30 Josef Cacek (1.6.0)
  * TSA hash algorithm support added also as a program option in both modes - CLI (-tsh) and GUI

2014-06-24 Josef Cacek (1.5.5 test)
  * tsa.hashAlgorithm support in conf.properties

2014-06-24 Josef Cacek
  * jsignpdf-itxt moved directly under JSignPdf project (on github) 

2014-06-22 Josef Cacek (1.5.4)
  * Recompiled 1.5.3 - a wrong version of jsignpdf-itxt caused non-working time-stamping

2014-06-11 Josef Cacek (1.5.3)
  * Fixed unregistering PKCS11 keystore type for GUI

2014-06-10 Josef Cacek
  * Verifier - added exit code 10 when no signature field is present in the PDF

2014-05-30 Josef Cacek (1.5.2)
  * Fix -ff option in Verifier (it's flag without arguments, till now an argument was required)
  * Fix exit codes in Verifier (the non-zero codes used even if the -ff is not used)
  * Disable fallbacks for key alias lookup. Originally if the alias name was used
    and it doesn't existed in the keystore, the first key in the selected keystore was used.

2013-10-02 Josef Cacek (1.5.1)
  * Added support for signature field placeholders in custom L2 texts. Possible values are:
    - ${signer}