@@ -1,5 +1,5 @@
-jsignpdf.version=1.6.4
-jsignpdf.cvs.tag=JSignPdf_1_6_4
+jsignpdf.version=1.6.5
+jsignpdf.cvs.tag=JSignPdf_1_6_5
 jsignpdf.splashimage.path=doc/icon/splash_1.0.0.bmp
 
 #ooo.exec=c:\\Program Files\\LibreOffice 3.5\\program\\soffice.exe
