@@ -1,7 +1,36 @@
 #!/bin/sh  
-unset DISPLAY  
-scriptname=$(winepath -w "JSignPdf.iss")
-distdir=$(winepath -w "$1")
-outputdir=$(winepath -w "$2")
+set -eu
 
-wine "C:\Program Files (x86)\Inno Setup 5\ISCC.exe" "$scriptname" "/dDistDir=${distdir}" "/dOutputDir=${outputdir}" "$3" "$4" "$5" "$6" "$7" "$8" "$9"
+unset DISPLAY
+
+escone() {
+    printf %s\\n "$1" | sed "s/'/'\\\\''/g;1s/^/'/;\$s/\$/' \\\\/"
+}
+
+winpaths() {
+    for arg; do
+        if [ -e "$arg" ]; then
+            escone "$(winepath -w "$arg")"
+        else
+            escone "$arg"
+        fi
+    done
+    echo " "
+}
+
+winenv() {
+    wine cmd /c "echo $1" | tr -d '\r'
+}
+winenv %PROGRAMFILES%
+winepath -u "$(winenv %PROGRAMFILES%)"
+
+PROGFILES_PATH="$(winepath -u "$(winenv %PROGRAMFILES%)")"
+
+INNO_BIN="Inno Setup 6/ISCC.exe"
+INNO_PATH="${PROGFILES_PATH}/${INNO_BIN}"
+
+echo eval set -- "$(winpaths "$@")"
+eval set -- "$(winpaths "$@")"
+
+echo exec wine "$INNO_PATH" "$@"
+exec wine "$INNO_PATH" "$@"
